apps/tubearchivist/elasticsearch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivist-es
  namespace: apps
  labels:
    app: archivist-es
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: archivist-es
  template:
    metadata:
      labels:
        app: archivist-es
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: archivist-es
          image: bbilly1/tubearchivist-es:latest@sha256:9da63fb1973ec3d57daf6916be948eddd0d8a404cc8e447c938480c85fe2c554
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9200
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              memory: 2Gi
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 12
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 3
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: archivist-es-data
---
apiVersion: v1
kind: Service
metadata:
  name: archivist-es
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: archivist-es
  ports:
    - name: http
      port: 9200
      targetPort: 9200
