apps/tubearchivist/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tubearchivist
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tubearchivist.ramoneees.com`)
      kind: Rule
      services:
        - name: tubearchivist
          port: 8000
  tls:
    secretName: wildcard-ramoneees-com-tls
